editando update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,3 +32,5 @@ jobs:
           git config --global user.email 'github-actions@github.com'
           git add README.md
           git commit -m "Atualiza README com dados do Codeforces"
+
+          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }} HEAD:main
